--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,27 @@
     background-color: hsl(var(--primary) / 0.2);
     color: hsl(var(--foreground));
   }
+  
+  /* Light mode social icons visibility */
+  .text-gray-400 {
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+  
+  .light .text-gray-400 {
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+  }
+  
+  .light .text-blue-400 {
+    color: rgb(59 130 246 / var(--tw-text-opacity));
+  }
+  
+  .light .text-cyan-400 {
+    color: rgb(34 211 238 / var(--tw-text-opacity));
+  }
+  
+  .light .text-red-400 {
+    color: rgb(248 113 113 / var(--tw-text-opacity));
+  }
 }
 
 @layer utilities {
